--- a/src/Container/Players/Players.css
+++ b/src/Container/Players/Players.css
@@ -8,6 +8,7 @@
     font-size: large !important;
     width: 19%;
     margin-left: 35px;
+    margin-top: 100px;
 }
 
 .hide {
